2001-02-14  Bill Gribble  <grib@billgribble.com>

	* src/scm/qif-import/*.scm: fuzzify account type rules a bit to
	make imports more likely to match up with existing accounts.  Fix
	broken "New" detection.

	* src/gnome/druid-qif-import.c: add default acct based on file 
	name

	* src/gnome/dialog-account-picker.c: make sure picker gets
	scrolled to initial selection.
	
2001-02-14  Christian Stimming  <stimming@tuhh.de>

	* src/scm/html-utilities.scm (gnc:html-build-acct-table): Add
	grouping of accounts according to their types and show their
	subtotal. Major cleanup.

2001-02-13  Bill Gribble  <grib@billgribble.com>

	* src/engine/gnc-numeric.c: fix stupid. stupid. stupid. stupid 
	log10 error

	* src/guile/gnc-helpers.c: start to fix scm_to_gint64 for
	guile-1.3.. this is sort of a duct-tape fix.  We need to port some
	stuff from the guile-1.4 source tree.  Should work fine unless you
	are Bill Gates and you do your accounting in lira.

	* src/gnome/dialog-style-sheet.c: handle WM delete event 

	* src/scm/qif-import/qif-to-gnc.scm: fix backtrace-if-exception 
	usage; add preliminary memo/payee-to-account mapping.

	* src/scm/utilities.scm: define hash-fold if it's not builtin

2001-02-12  Bill Gribble  <grib@billgribble.com>

	* src/scm/html-style-info.scm: minor fixes to html style
	compile

	* various in src/scm: fixes for i18n .. use (N_ instead of (_ 
	where appropriate. 

	* src/engine/gnc-numeric.{c,h}, src/scm/gnc-numeric.scm: add
	support for a new auto-denom type, GNC_DENOM_SIGFIGS(x), where x
	is the number of "significant figures" you want in the output.
	This means that the output denominator will always be a poewr of
	10, but which power is determined by the magnitude of the
	argument.

	* src/engine/Transaction.c, src/gnc-exp-parser.c,
	src/gnc-ui-util.c: make minor changes to use GNC_DENOM_SIGFIGS
	where appropriate.

	* src/gnome/dialog-account-picker.{c,h}: totally rewritten QIF
	import account picker.  this one is much less likely to get you